Fix -o behavior with patterns that match the empty string, as per PR 43896.